# CPSL_TI_Radar

./: .gitignore  .gitmodules  CLAUDE.md  Config.py  Processor.py  README.md  Radar.py  Readme.md  Streamer.py  config_Radar.json  demo.ipynb  determine_serial_ports.ipynb  environment.yaml  generated_config.cfg  generated_config.json  rviz_config.rviz
CPP_Development/: DCA1000CommandsDONE.cpp  DCA1000CommandsDONE.hpp  DCA1000HandlerDONE.cpp  DCA1000HandlerDONE.hpp  DCA1000ProcessorUNTESTED.cpp  IWRConfig.hpp  RadarConfigReaderDONE.cpp  RadarConfigReaderDONE.hpp
CPSL_TI_Radar/: CPSL_TI_Radar_2.json  CPSL_TI_Radar_settings.json  README.md  backup_environment.yaml  environment.yaml  generated_config.json  generated_config_custom_CFAR.cfg  pyproject.toml  run_radar.py
CPSL_TI_Radar/CPSL_TI_Radar/: CLI_Controller.py  ConfigManager.py  Radar.py  _Background_Process.py  _Message.py
CPSL_TI_Radar/CPSL_TI_Radar/Processors/: DCA1000_Processor.py  IWR_Demo_Processor.py  _Processor.py
CPSL_TI_Radar/CPSL_TI_Radar/Processors/TLV_Processors/: _PointCloud.py  _TLVTags.py
CPSL_TI_Radar/CPSL_TI_Radar/Streamers/: DCA1000_Streamer.py  Serial_Streamer.py  _Streamer.py
CPSL_TI_Radar/CPSL_TI_Radar/Streamers/Handlers/: DCA1000.py
CPSL_TI_Radar/archived_code/: _TLV_listener.py
CPSL_TI_Radar/json_radar_settings/: radar_1.json  radar_1443.json  radar_1_ISAR.json  radar_1_defaults.json  radar_2.json  radar_2_jetson.json  radar_6843.json  radar_6843_ODS.json
CPSL_TI_Radar/tests/: conftest.py  test_config.py  test_ethernet.py  test_serial.py
CPSL_TI_Radar/utilities_and_notebooks/: bartlet.ipynb  determine_serial_ports.ipynb  print_config.ipynb  test_ethernet_traffic.ipynb
CPSL_TI_Radar_cpp/: CMakeLists.txt  Readme.md  main.cpp  main_no_runner.cpp
CPSL_TI_Radar_cpp/cmake/: Config.cmake.in
CPSL_TI_Radar_cpp/config/radar/DCA1000/IWR1843_configs/: Iwr18xx_DCA_mmStudio_1rx_1chirp.cfg  Iwr18xx_DCA_mmStudio_original.cfg
CPSL_TI_Radar_cpp/config/radar/DCA1000/custom_configs/: ISAR_1.cfg  ISAR_2.cfg  ISAR_mocap_revised.cfg  long_range.cfg  medium_range.cfg
CPSL_TI_Radar_cpp/config/radar/IWR_Demos/: 6843_long_range_high_v_res_CFAR.cfg  6843_low_CFAR.cfg
CPSL_TI_Radar_cpp/config/radar/IWR_Demos/rad_nav_configs/: 1443_lr.cfg  6843_high_v_res_config.cfg  6843_lr_CFAR_7dB_3D.cfg  6843_vel_sr.cfg
CPSL_TI_Radar_cpp/config/radar/human_movement/: 1843_human_movement.cfg
CPSL_TI_Radar_cpp/config/radar/nav_configs/: 1843_RadarHD.cfg  1843_stress_test.cfg  6843_IcaRAus_ods_10Hz.cfg  6843_RadVel_ods_5Hz.cfg  6843_vel_sr.cfg
CPSL_TI_Radar_cpp/config/system/: back_radar_IWR1843_IcaRAus.json  back_radar_IWR1843_RaGNNarok_UGV_10m.json  back_radar_IWR1843_RaGNNarok_UGV_5m.json  back_radar_IWR1843_dca_RadVel_10Hz.json  down_radar_6843_IcaRAus_ods_10Hz.json  down_radar_6843_RadVel_ods_10Hz.json  front_radar_IWR1843_Hermes.json  front_radar_IWR1843_IcaRAus.json  front_radar_IWR1843_RaGNNarok_UAV_10m.json  front_radar_IWR1843_RaGNNarok_UAV_50m.json  front_radar_IWR1843_RaGNNarok_UGV_5m.json  front_radar_IWR1843_RadCloud.json  front_radar_IWR1843_RadarHD.json  front_radar_IWR1843_dca_RadVel_10Hz.json  front_radar_IWR1843_stress_test.json  radar_0_IWR1843_demo.json  radar_0_IWR1843_human_movement.json  radar_0_IWR1843_nav.json  radar_0_IWR1843_nav_dca_RadSAR.json  radar_0_IWR1843_nav_dca_RadSAR_lr.json  radar_0_IWR1843_nav_dca_RadVel.json  radar_0_IWR1843_nav_dca_RadVel_10Hz.json  radar_0_IWR1843_nav_dca_RadVel_20Hz.json  radar_0_IWR1843_nav_dca_RadVel_5Hz.json  radar_0_IWR1843_vel_sr.json  radar_0_IWR6843_ods_dca_RadVel.json  radar_0_IWR6843_ods_human_movement.json  radar_0_RadCloud_NetSW.json  radar_0_RadSAR_NetSW.json  radar_0_RadarHD_NetSW.json  radar_1.json  radar_1_IWR1843_DCA_demo.json  radar_1_IWR1843_nav.json  radar_1_IWR1843_vel_sr.json
CPSL_TI_Radar_cpp/configs/: back_radar_IWR1843_IcaRAus.json  back_radar_IWR1843_RaGNNarok_UAV_5m.json  back_radar_IWR1843_RaGNNarok_UGV_10m.json  back_radar_IWR1843_RaGNNarok_UGV_5m.json  back_radar_IWR1843_dca_RadVel_10Hz.json  down_radar_6843_IcaRAus_ods_10Hz.json  down_radar_6843_RadVel_ods_10Hz.json  down_radar_IWR6843_ods_dca_RadVel.json  front_radar_IWR1843_Hermes.json  front_radar_IWR1843_IcaRAus.json  front_radar_IWR1843_RaGNNarok_UAV_10m.json  front_radar_IWR1843_RaGNNarok_UAV_50m.json  front_radar_IWR1843_RaGNNarok_UAV_5m.json  front_radar_IWR1843_RaGNNarok_UGV_10m.json  front_radar_IWR1843_RaGNNarok_UGV_5m.json  front_radar_IWR1843_RadCloud.json  front_radar_IWR1843_RadarHD.json  front_radar_IWR1843_dca_RadVel_10Hz.json  front_radar_IWR1843_stress_test.json  radar_0_IWR1843_demo.json  radar_0_IWR1843_human_movement.json  radar_0_IWR1843_nav.json  radar_0_IWR1843_nav_dca.json  radar_0_IWR1843_nav_dca_RadSAR.json  radar_0_IWR1843_nav_dca_RadSAR_lr.json  radar_0_IWR1843_nav_dca_RadVel.json  radar_0_IWR1843_nav_dca_RadVel_10Hz.json  radar_0_IWR1843_nav_dca_RadVel_20Hz.json  radar_0_IWR1843_nav_dca_RadVel_5Hz.json  radar_0_IWR1843_vel_sr.json  radar_0_IWR6843_ods_dca_RadVel.json  radar_0_IWR6843_ods_human_movement.json  radar_0_RadCloud_NetSW.json  radar_0_RadSAR_NetSW.json  radar_0_RadarHD_NetSW.json  radar_1.json  radar_1_IWR1843_DCA_demo.json  radar_1_IWR1843_nav.json  radar_1_IWR1843_vel_sr.json
CPSL_TI_Radar_cpp/src/: CLIController.cpp  CLIController.hpp  CMakeLists.txt
CPSL_TI_Radar_cpp/src/CLIController/: CLIController.cpp  CLIController.hpp  CMakeLists.txt
CPSL_TI_Radar_cpp/src/DCA1000/: ADCCubeConverter.cpp  ADCCubeConverter.hpp  CMakeLists.txt  DCA1000Commands.cpp  DCA1000Commands.hpp  DCA1000Handler.cpp  DCA1000Handler.hpp  DCA1000Socket.cpp  DCA1000Socket.hpp  FrameAssembler.cpp  FrameAssembler.hpp
CPSL_TI_Radar_cpp/src/Runners/: CMakeLists.txt  DCA1000Runner.cpp  DCA1000Runner.hpp  Runner.cpp  Runner.hpp
CPSL_TI_Radar_cpp/src/SerialStreamer/: CMakeLists.txt  SerialStreamer.cpp  SerialStreamer.hpp  TLVProcessing.cpp  TLVProcessing.hpp
CPSL_TI_Radar_cpp/src/utilities/: CMakeLists.txt  JSONHandler.cpp  JSONHandler.hpp  RadarConfigReader.cpp  RadarConfigReader.hpp  SystemConfigReader.cpp  SystemConfigReader.hpp
GUI_Testbed/: Radar.py  (+16 more)
(+170 files in other folders)
