[tool.poetry]
name = "cpsl-ti-radar"
version = "0.1.0"
description = "Python Packaged to integrate CPSL hardware with TI radars and data capture cards"
authors = ["David <david.hunt@duke.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "CPSL_TI_Radar"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyserial = "^3.5"
scipy = "^1.11.1"
numpy = "^1.25.1"
jupyterlab = "^4.0.3"
ipykernel = "^6.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
